# ChangeLog for dev-python/python-keystoneclient
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/python-keystoneclient/ChangeLog,v 1.56 2015/05/30 01:43:54 prometheanfire Exp $

*python-keystoneclient-1.5.0 (30 May 2015)

  30 May 2015; Matthew Thode <prometheanfire@gentoo.org>
  +python-keystoneclient-1.5.0.ebuild:
  bup

*python-keystoneclient-1.3.1 (28 Apr 2015)

  28 Apr 2015; Matthew Thode <prometheanfire@gentoo.org>
  +python-keystoneclient-1.3.1.ebuild,
  -files/cve-2015-1852-master-keystoneclient.patch,
  -python-keystoneclient-1.3.0-r2.ebuild:
  an actual release with the cve fix now instead of just a patch

  28 Apr 2015; Matthew Thode <prometheanfire@gentoo.org>
  python-keystoneclient-1.4.0.ebuild:
  fix bug 547602

*python-keystoneclient-1.4.0 (22 Apr 2015)

  22 Apr 2015; Matthew Thode <prometheanfire@gentoo.org>
  +python-keystoneclient-1.4.0.ebuild:
  bup

  16 Apr 2015; Matthew Thode <prometheanfire@gentoo.org>
  -python-keystoneclient-1.0.0.ebuild:
  removing the old badness for bug 546640

  15 Apr 2015; Agostino Sarubbo <ago@gentoo.org>
  python-keystoneclient-1.0.0-r1.ebuild:
  Stable for x86, wrt bug #546640

  15 Apr 2015; Agostino Sarubbo <ago@gentoo.org>
  python-keystoneclient-1.0.0-r1.ebuild:
  Stable for amd64, wrt bug #546640

*python-keystoneclient-1.0.0-r1 (14 Apr 2015)
*python-keystoneclient-1.0.0 (14 Apr 2015)

  14 Apr 2015; Matthew Thode <prometheanfire@gentoo.org>
  +files/keystoneclient-1.0.0-cve-2015-1852.patch,
  +python-keystoneclient-1.0.0-r1.ebuild, +python-keystoneclient-1.0.0.ebuild:
  backporting cve fix for fast stablization

*python-keystoneclient-1.3.0-r2 (14 Apr 2015)

  14 Apr 2015; Matthew Thode <prometheanfire@gentoo.org>
  +files/cve-2015-1852-master-keystoneclient.patch,
  +python-keystoneclient-1.3.0-r2.ebuild, -python-keystoneclient-0.11.0.ebuild,
  -python-keystoneclient-0.11.1.ebuild, -python-keystoneclient-0.11.2.ebuild,