@@ -6,25 +6,28 @@ DIST python-keystoneclient-1.0.0.tar.gz 314308 SHA256 6d960d2196efc7a181519a77f7
 DIST python-keystoneclient-1.3.1.tar.gz 338187 SHA256 8a421dbdf01251119164bf6baa0ef78b261e5dd4d3508748e47b77d7652e7e92 SHA512 d11825b717d0aeec67d4dfb0382173ee834fe3dea2097b8ff9505b86bb08a5579d6fe87509d65022d4436a3a1b4d20f2a877ece3160b53979999495b77df0f08 WHIRLPOOL 9aa0af722f56eb4d98d7efb8a35b1db95207970fba0b32496a9ae4593a16471f976efe1e9bb3690106ec0f5a76b5a744e9177cc7c03d9ffe9ed54111e3bb138c
 DIST python-keystoneclient-1.4.0.tar.gz 347743 SHA256 f525fc2431dc3eb863490d4d026d4dfb24e3b5a57496557cb6b5e7ebe9a7f9b0 SHA512 0a044235b5c9da2c9854e5e612ce1ae1c859119f661c226d8da53879b52d3e484d481a57e5daa6b1cf3e4f65ac1d47a4c24d720fe450b791f5752a44906d53d5 WHIRLPOOL bdc7c07fbc625c15baf12278d00c75ee40b3d240e62833d818fa9085a960d75d62a681b5e8965d5c968b0d1ed4bb21eddb29c141cf7100f2af86cae9d2e9834e
 DIST python-keystoneclient-1.5.0.tar.gz 344611 SHA256 7e2da00b5f65b60a84b5891b8070a5e3ff12f76da8e6be23cc4d97287325cff7 SHA512 26bdda147549b3ca9c46aff20451c5b9ad7eea6b39eea8f5cf4b682c2f62eebfba64cfa82569993979299c7af20e0fa9652db5fbd51969dc97fe744cb1d0452d WHIRLPOOL 2fa31b1c05cb7c9dfa01302878edb470c36ebd6c65cd6bc9deeb8f87228e8125c1fa3a395df22d68d51fb411ca37deb5b35dac1df4b828ba867d3c52c53e45a2
+DIST python-keystoneclient-1.6.0.tar.gz 346719 SHA256 45ac3b13b8b63ab62cb3fbfcaf46a2241d8053dfe17961db911c45c1f23d06ff SHA512 72447f53afb1b32285077865511cc5a5fa472d27d04b88570eee5cae9a8ed689e7ebe65ab5576ce170b89bb3be3cf9cfa4e8cc79d5337659f93479a37ec09659 WHIRLPOOL 8dff45331be9267f2a1935008c5b2d5391ff2698060619ab0b1dc3036d21d8dae1cf226b750e83314512e0626d569149d85dea68781c7a9e39663f1bd7b34e18
 EBUILD python-keystoneclient-1.0.0-r1.ebuild 3191 SHA256 9b4e7b93295c403b125332856daeba281ef15f3af408ba19e04fc0f02a58891c SHA512 c100a3ef9f7291ae714520d34a3825c5daf7008104e0aef8f0b8018b59b05a6e46dc60954b35bcdd1a02bedd7a5fdbd1a0f60e75ca2ec0b860c60105960f85fe WHIRLPOOL ddedada3ec2b4866fc03db152825edfae194a7264d7a5d1a4ec1a6d00481bd98dae6dec34ee42969b9928e59c82ebf3888e9cf59ca713bab372ef6f303e192cb
 EBUILD python-keystoneclient-1.3.1.ebuild 3071 SHA256 86aa2c8823ac15b7b3682666f431d3fb43efbe4aa47a1a0a118e2762d359b397 SHA512 9a690ee8ee88b2c8c880fcc7afe06ac93ce2e773bbde927de71c541857f88320b725a711e0ee948f25c38e14453f19c4078868da6e4b2b2b708512c282655842 WHIRLPOOL a0530a86d455c70275fb7454f9e441dbe31a6dfcd73b82155846a9a404aa14e8c9be66ed0fab24b0d57ffacdade5d0c3e3e227f400dbbfc8324d88698455b569
 EBUILD python-keystoneclient-1.4.0.ebuild 3117 SHA256 e4706886d4a6ec292899e59c6dfdfc82895b5f40a4e6292df303872001c35a7f SHA512 b9e6d2bd60e5b44444d738c4395ae186e43ed7b14639693524f07bd710a0fb3af67373249af2619549dc36633e2ee256f6bea3018cec0e127de8667e57dba035 WHIRLPOOL 42eec63efe889914faa65e8b3e2a365990ad728bea34ed53fe1d7c5cc187d4667d9ef438a8e997dd139e684dd4647c884193c4ca8db178cc1d312acf0c2c2c13
 EBUILD python-keystoneclient-1.5.0.ebuild 3072 SHA256 629cf26741f91e0993c4c01d2de87cc077b47110368557edfe56920bdd151c10 SHA512 a245b03f39048693e93dea1252521b9238fe7deb8efffb0287813699fd6daaf94acd9183622a24739a1618ef8a2f99ab4342a094dfcf04c0564b091d8ee79b30 WHIRLPOOL 62823f1ce6a7c115925d78fcf7d5950fa7b9b24a7873362bbce0a884c705b2cf4a159be974cae1432ba86963c0ae99cf09d511992223b415847e6d984b38268a
-MISC ChangeLog 11823 SHA256 fd4e02de5466aad7630c281245f24c7acbc9594f27110451b48c2ae57eddff54 SHA512 7c145c84a862d34d994110fb43412e7b1c4e4bd31f6a5928f2abb760404bc162a930f999a7ac32d819b23dfae5348682f052155d601630c6b01bbe59d850da11 WHIRLPOOL 38e1f3aa1d482fa7d692de530f67c6fcc87689888e6a5fa119db8952d789fca0901807598e0752d8dcc5049aeee74a534acb585ffc1d3b6a5d66aa927c6721d3
+EBUILD python-keystoneclient-1.6.0.ebuild 3072 SHA256 fbd38e1bbd6ad35c4e03ea654a15aefa95c630ea24f5e3ad084c8bf52f2bdeab SHA512 7fc8225e70d27301fe1e901834320910b882095bfad8a8b896ac94726438bff591d15ba68fb0341c6af078384cd363b717298108109c1ada7ce09fd956e89e5c WHIRLPOOL d50b8fa022535f7e42bcfd70aa69a7cf2062e5d1d26ecd2b255fe5301a0d9b53f81fa8169267884955daaf1b688b9d080f8114c7afd00697bb3e535d6ff108ab
+MISC ChangeLog 11970 SHA256 8440dbada13c08011bdd303c5cf2878ade178235e03c8044b154321a655f596d SHA512 d3be9c439aa73d7b8ae6f908c7c0f2051c920e8b650c92d63e742d28e6ccd8aa94b6e1df7af2cbece6de7ffdef58d2aa6edce990d76d205ebfc495957bf87dbb WHIRLPOOL 30834e2d030787b322352db3820da03712359d1b8132ce14df0f8300a021d3af06663ac3f1aaac8d9991a818b750c4c7ec1e94f2087ceb6af7202e8ecf08cfec
 MISC metadata.xml 368 SHA256 a91cef59b9f9006441eae6ac81afcf9efd4382762bcb6300f16046ba2851ce8d SHA512 6035564d5afb3100400c97ba1671a2ca65387a1fd67a77145ed3968c2ccadaa28eec54afa03b9ae67b1e69843275adbe92646dad8ffb9995d2270c85f94ca679 WHIRLPOOL 858f1f68eb57ac301bfa5bcf8db0f01853c5c1a612570f2e45a867fd16fddf84da77bff85441dec22df18634c56018874675d056f200e8336da9709d49d0ad48
 -----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVaRXsAAoJEGSje+quGaToJwMQAL0aYoPf5Z8VNUBDet7Hg1vl
-LlKEpfAB9m4koKfPdI25p2SbKcz6lEI+7B2O0Bi/sY7rFp66Zf9vrfzLdYvNONeh
-o9Iv0xKREZg/QoGaUq6BmNYV7BE/6D9RxxTGIaqjYjqvJbWZjH7xzLMO2lqqNKlR
-WjJUi3NbmBS2IEHa78SWHeQ+IEmnBsyWud4mHIHvUZ3wKuIvKX6hgBFMjvKSNQyO
-baZj/Y6GyrhspWiPoYmrJRcNDAg6BAhVXbFSBFb1bZtQWIn20wd4NqCle494+pAP
-c+wvBimzUKumyVL0AtmqI+kTchA16zPnbIw1azSY201RZnu9t3hb6T2SUc71dUv4
-gnQLpr1nYQDuWmD7Gu4mk1RXdHbZ3/v5Ev2fyLspz11GIGoQ1Ty+ruvb+AFxx7pR
-eTbfsUcghlZX68Str+Yn83VwCbZid6iGWXIL/uPi7ScGAP63Y3vcZzE8MlYZTL8v
-pzHR4JVwE+yJRL7BPvcAtoeg3LR0hf8AK7Qiw+0e9r52lGsJGT22CP+y611akcY4
-7UNZGMo4OHfCn9PGTzhmDr2cuG2TRZ+veNW3huFKqq56OpSbLkvJEcLeMKPg69e4
-zcjLfapIMJajxTsE4F75ycSAjLkBH5E/V3hXnnUWr7vjaW3ya2SCa6laTYYhoe0c
-tfaxds+vW7u7CVVyS8A+
-=57uu
+iQIcBAEBCAAGBQJVb22RAAoJEGSje+quGaTosU4QALMB5/J9Z1TtpQMOm57K9iq9
+7N6GJmGTHms8B+E4cWC7LzfueyqctTRFAr57wuubyTd0c0YtBvVkEN0OkU4SkfY0
+mNHXLd66fhzdj2XXvvayoYW5Uww2/fmnP9TZnQSOyaKdaYCCmg1JVxd3QXDWSkfs
++fXjvMwVuVz+36lR25BviBELVnDVm/4GETO77InrdjBaz1laHBcDWb+/bNDtokxx
+nbC19ocNW56kgq2wootdBa8yZJGAaZw6bz7xK0eS7Y8i7bKbFJFPuDls5n2CXHy+
+Aw6iSpm60HvvQKcvGPNuNWep1jgWxXwCdPU5mlgDShpLLB2X8HUYQQ/D/8jtdjLJ
+jNmdUnWWZzixgRlWO8PEtY5IkJ8kn3bt310NcFYmrsNwyKo/rfDGMUj3CU9fH8eA
+zZh1oUJhYzgCChPnCnqfvmsCJdR4t+fHtEFxcZouKU+TWNC48szeOv3fOwM4LwxP
+W3m2bmMhOXnYC87Oynd8KtxJTB15mOGHe7YkNJAdBVVmF0MLUiG3XvcELAuQ0hL+
+l84fKACmU19DK2z7nMbvBvzMqu3x0UE8KoC399Pye+4FRNIHhKPV26dsTH0LcegG
+SHpiKr5gsYrvXyh08qwfrjMZQHWTjXFRU9r6iwJPgQ4zvG4VQpUAu8U3xjWepFu6
+aQ9E3m0PkY4Zcd/o9JNO
+=tMOL
 -----END PGP SIGNATURE-----
