@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/python-keystoneclient
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-keystoneclient/ChangeLog,v 1.56 2015/05/30 01:43:54 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-keystoneclient/ChangeLog,v 1.57 2015/06/03 21:10:56 prometheanfire Exp $
+
+*python-keystoneclient-1.6.0 (03 Jun 2015)
+
+  03 Jun 2015; Matthew Thode <prometheanfire@gentoo.org>
+  +python-keystoneclient-1.6.0.ebuild:
+  bup
 
 *python-keystoneclient-1.5.0 (30 May 2015)
 
